Add WebSocket handler tests and document logging guidance